--- a/site.yaml
+++ b/site.yaml
@@ -11,8 +11,7 @@ feed:
    feeds:
 
      - name: rejseplanen
-       url: http://labs.rejseplanen.dk/files/GTFS/GTFS.zip
-
+       url: https://transitfeeds-data.s3-us-west-1.amazonaws.com/public/feeds/rejseplanen/705/20161003/gtfs.zip
 
  - name: es  # Spain
    feeds:
