Add favicon and make it working beside https.
- After moving the site beside https its hostname changed to node01
- To work beside https pin icon and fav icon has to be fetch using https too.

--- a/provision.yaml
+++ b/provision.yaml
@@ -39,7 +39,7 @@
   - name: Set host name
     become: true
     become_user: root
-    hostname: name=www.pubtransit.org
+    hostname: name=node01.pubtransit.org
 
   - name: Fix proxy environment
     become: true
