Fix coverage problem.

--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,8 @@ install_command = pip install -r requirements.txt -U {opts} {packages}
 commands =
     coverage erase
     rm -fR .coverage .coverage.*
-    py.test --cov=transit_feed --cov-report term-missing --cov-report html \
-        --cov-report xml transit_feed
+    python -m coverage run -a --source transit_feed --omit="*/test*" -m pytest -m 'not crash' -v transit_feed/tests
+    python -m coverage html -d build/coverage
 
 [testenv:flake8]
 deps =
