--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ commands =
     rm -fR .coverage .coverage.*
     python -m coverage run -a --source transit_feed --omit="*/test*" -m pytest -m 'not crash' -v transit_feed/tests
     python -m coverage html -d build/coverage
+    python -m coverage report --skip-covered
 
 [testenv:flake8]
 deps =
