Rename main package as pubtransit.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,39 +5,30 @@
 universal=1
 
 [metadata]
-name = transit
-summary = transit.org web service
+name = pubtransit
+summary = Pub Transit Web site (https://www.pubtransit.org)
 description-file =
     README.md
 author = Federico Ressi
-author-email = federico.ressi@intel.com
-home-page = https://github.com/FedericoRessi/transit
+author-email = federico.ressi@gmail.com
+home-page = https://github.com/FedericoRessi/pubtransit
 classifier =
-    Development Status :: 1 - Planning
+    Development Status :: 4 - Beta
     Environment :: Console
-    Intended Audience :: Developers
+    Intended Audience :: System Administrators
     License :: OSI Approved :: Apache Software License
     Natural Language :: English
     Operating System :: Unix
     Programming Language :: Python
-    # Topic :: Software Development :: Testing
+    Topic :: Utilities
 
 [files]
 packages =
-    transit_feed
-    transit_www
-
-[build_sphinx]
-source-dir = docs/source
-build-dir = docs/build
-all_files = 1
-
-[upload_sphinx]
-# upload-dir = docs/build/html
+    pubtransit
 
 [extract_messages]
-# keywords = testing automation provisioning
+keywords = Pub Transit Web site
 
 [entry_points]
 console_scripts =
-    transit-feed = transit_feed.feed:main
+    pubtransit = pubtransit:main
