--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,21 @@ sudo: false
 
 matrix:
   include:
-  - language: python
+
+  - env: GOAL=test_python
+    language: python
     python: "2.7"
-    env: GOAL=test_python
     install:
-      - pip install -U pip tox setuptools coveralls -r requirements.txt
+      - pip install -U pip tox setuptools coveralls
     after_success: coveralls --rcfile=.coveragerc
-  - language: python
+
+  - env: GOAL=test_install
+    language: python
     python: "2.7"
     install:
-      - apt-get install cython
-      - pip install -U pip setuptools -r requirements.txt
-    env: GOAL=test_install
+      - pip install -U pip setuptools Cython
+      - pip install -r requirements.txt
+
 
 script:
     - make $GOAL
