--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ matrix:
     python: "2.7"
     install:
       - pip install -U pip tox setuptools coveralls
+      - pip install -r requirements.txt
     after_success: coveralls --rcfile=.coveragerc
 
   - env: GOAL=test_install
